--- a/.config/i3/config
+++ b/.config/i3/config
@@ -47,7 +47,7 @@ bindsym $super+Return exec rxvt-unicode
 bindsym $super+Delete exec --no-startup-id "i3lock -c 000000"
 
 # start dmenu/rofi
-bindsym $super+shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -sb '#60ace0' -sf '#1a1a1b' -fn 'Roboto:size=11'"
+bindsym $super+shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -sb '#86ccfc' -sf '#1a1a1b' -fn 'Roboto:size=11'"
 bindsym $super+d exec rofi -lines 12 -padding 18 -width 70 -location 0 -show drun -columns 3 -font 'Noto Sans 12'
 
 # common apps keybind
@@ -178,7 +178,7 @@ bar {
         separator #1a1a1b
 
 		# colour of border, background, and text
-        focused_workspace	#2f343f	#60ace0	#1a1a1b
+        focused_workspace	#2f343f	#86ccfc	#1a1a1b
         active_workspace	#2f343f	#2f343f	#d8dee8
         inactive_workspace	#1a1a1b	#1a1a1b	#d8dee8
         urgent_workspace	#2f343f	#ebcb8b	#2f343f
@@ -189,7 +189,7 @@ bar {
 for_window [class=".*"] border pixel 3
 
 # colour of border, background, text, indicator, and child_border
-client.focused			#60ace0 #2f343f #d8dee8 #60ace0 #777777
+client.focused			#86ccfc #2f343f #d8dee8 #86ccfc #777777
 client.focused_inactive	#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.unfocused		#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.urgent			#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
