--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -210,7 +210,7 @@ interval=persist
 command=date '+[ %d/%m %a      %H:%M ]    '
 align=center
 interval=1
-color=#60ace0
+color=#86ccfc
 
 
 # Generic media player support
