--- a/.config/i3/config
+++ b/.config/i3/config
@@ -54,7 +54,7 @@ bindsym $super+Return exec urxvt
 
 # start dmenu/rofi
 bindsym $super+d exec rofi -lines 12 -padding 20 -width 50 -location 0 -show drun -columns 4 -font 'Noto Sans 14' -hide-scrollbar
-bindsym $super+shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -sb '#56a4db' -sf '#1a1a1b' -fn 'Roboto:size=12'"
+bindsym $super+shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -sb '#6dafde' -sf '#1a1a1b' -fn 'Roboto:size=12'"
 
 # common apps keybind
 bindsym Print --release exec "scrot -s /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
@@ -185,7 +185,7 @@ bar {
         separator #1a1a1b
 
 		# colour of border, background, and text
-        focused_workspace	#2f343f	#56a4db	#1a1a1b
+        focused_workspace	#2f343f	#6dafde	#1a1a1b
         active_workspace	#2f343f	#2f343f	#d8dee8
         inactive_workspace	#1a1a1b	#1a1a1b	#d8dee8
         urgent_workspace	#2f343f	#ebcb8b	#2f343f
@@ -196,7 +196,7 @@ bar {
 for_window [class=".*"] border pixel 4
 
 # colour of border, background, text, indicator, and child_border
-client.focused			#56a4db #2f343f #d8dee8 #56a4db #777777
+client.focused			#6dafde #2f343f #d8dee8 #6dafde #777777
 client.focused_inactive	#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.unfocused		#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.urgent			#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
