--- a/.config/i3/config
+++ b/.config/i3/config
@@ -34,9 +34,9 @@ exec --no-startup-id feh --bg-fill ~/.wallpaper.jpg
 #exec --no-startup-id nm-applet
 exec --no-startup-id redshift
 exec --no-startup-id goldendict
-exec --no-startup-id i3-msg 'workspace 1; exec urxvt'
-exec --no-startup-id i3-msg 'workspace 2; exec emacs'
-exec --no-startup-id i3-msg 'workspace 10; exec /usr/bin/firefox'
+#exec --no-startup-id i3-msg 'workspace 1; exec urxvt'
+#exec --no-startup-id i3-msg 'workspace 2; exec emacs'
+#exec --no-startup-id i3-msg 'workspace 10; exec /usr/bin/firefox'
 #exec --no-startup-id i3-msg 'workspace 10; exec telegram-desktop -startintray'
 
 # scratchpad
