--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,8 +3,10 @@ set $super Mod4
 set $alt Mod1
 
 # gaps
+#smart_gaps on
+#workspace 8 gaps inner 10 # for kanban
 #gaps inner 10
-#gaps outer 1
+#gaps outer -10
 #for_window [class="^.*"] border pixel 2
 
 # hide edge borders
@@ -30,8 +32,8 @@ exec --no-startup-id redshift
 exec --no-startup-id goldendict
 exec --no-startup-id megasync
 exec --no-startup-id /home/ctznfive/.dropbox-dist/dropboxd
+exec --no-startup-id i3-msg 'workspace 9; exec emacs'
 exec --no-startup-id i3-msg 'workspace 1; exec rxvt-unicode'
-exec --no-startup-id i3-msg 'workspace 2; exec emacs'
 exec --no-startup-id i3-msg 'workspace 10; exec /usr/bin/firefox'
 #exec --no-startup-id i3-msg 'workspace 10; exec telegram-desktop -startintray'
 
@@ -55,7 +57,7 @@ bindsym $super+d exec rofi -lines 12 -padding 18 -width 70 -location 0 -show dru
 # common apps keybind
 bindsym Print --release exec "scrot -s /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
 bindsym Shift+Print exec "scrot /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
-bindsym $super+F1 workspace 2; exec emacs; focus
+bindsym $super+F1 workspace 9; exec emacs; focus
 bindsym $super+F2 workspace 10; exec firefox; focus
 bindsym $super+F3 workspace 9; exec telegram; focus
 bindsym $super+F4 workspace 9; exec rxvt-unicode -e mutt; focus
@@ -188,12 +190,12 @@ bar {
         status_command i3blocks
 }
 
-for_window [class=".*"] border pixel 3
+for_window [class=".*"] border pixel 4
 
 # colour of border, background, text, indicator, and child_border
-client.focused			#6dafde #2f343f #d8dee8 #6dafde #777777
+client.focused			#6dafde #2f343f #d8dee8 #6dafde #888888
 client.focused_inactive	#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
-client.unfocused		#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
+client.unfocused		#2f343f #2f343f #d8dee8 #2f343f #292929
 client.urgent			#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.placeholder		#2f343f #2f343f #d8dee8 #2f343f #1a1a1b
 client.background		#1a1a1b
